--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Created by https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,intellij
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,visualstudiocode,intellij
-
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
@@ -160,3 +157,22 @@ replay_pid*
 .ionide
 
 Temp_Folder/
+
+
+
+### Git ###
+# Created by git for backups. To disable backups in Git:
+# $ git config --global mergetool.keepBackup false
+*.orig
+
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
+
+# End of https://www.toptal.com/developers/gitignore/api/git
